@startuml Campamento

top to bottom direction

entity "Users" as users {
    + user_id : int
    + user_id2 : varchar(32)
    + user_email : varchar(124)
    + user_password : varchar(256)
    + role : int <<0 = tutor, 1 = monitor, 2 = admin>>
    + enabled : tinyint
    + has_schedule : tinyint
}

entity "User Details" as user_details {
    + detail_id : int
    + detail_id2 : varchar(32)
    + user_id : int
    + user_name : varchar(256)
    + user_email : varchar(124)
    + user_relationship : varchar(128)
    + user_dni : varchar(9)
    + user_phone_number : varchar(16)
    + is_main : tinyint
}

entity "Participants" as participants {
    + participant_id : int
    + participant_id2 : varchar(32)
    + user_id : int
    + participant_name : varchar(100)
    + participant_birth_date : date
    + participant_allergies : text
    + participant_special_needs : text
    + participant_medical_treatment : text
}

entity "Groups" as groups {
    + group_id : int
    + group_id2 : varchar(32)
    + group_name : varchar(100)
    + monitor_id : int
    + group_size : int
}

entity "Group Participants" as group_participants {
    + relation_id : int
    + group_id : int
    + participant_id : int
}

entity "Activities" as activities {
    + activity_id : int
    + activity_id2 : varchar(32)
    + activity_name_es : varchar(100)
    + activity_name_en : varchar(100)
    + activity_description_es : text
    + activity_description_en : text
    + activity_tags_es : varchar(128)
    + activity_tags_en : varchar(128)
    + activity_datetime_start : datetime
    + activity_datetime_end : datetime
}

entity "Group Activities" as group_activities {
    + relation_id : int
    + group_id : int
    + activity_id : int
}

entity "Attendance" as attendance {
    + attendance_id : int
    + attendance_id2 : varchar(32)
    + activity_id : int
    + participant_id : int
    + checkin_datetime : datetime
    + checkout_datetime : datetime
}

entity "Payments" as payments {
    + payment_id : int
    + payment_id2 : varchar(32)
    + user_id : int
    + status : varchar(32)
    + amount : float
    + payment_date : date
}

entity "Schedule Participants" as schedule_participants {
    + schedule_id : int
    + participant_id : int
    + start_day : date
    + end_day : date
}

users ||--o{ user_details : "1,1 - 1,1"
users ||--o{ participants : "1,N - 1,1"
users ||--o{ payments : "1,N - 1,1"
users ||--o{ groups : "1,N - 1,1"

participants ||--o{ group_participants : "1,1 - 1,N"
participants ||--o{ attendance : "1,1 - N,1"
participants ||--o{ schedule_participants : "1,1 - 1,N"

activities ||--o{ group_activities : "1,1 - N,1"
activities ||--o{ groups : "1,1 - N,1"
groups ||--o{ group_participants : "1,1 - 1,N"
activities ||--o{ attendance : "1,1 - N,1"

attendance ||--o{ participants : "1,1 - N,1"

@enduml